tests-integration/tests/checking/snapshots/checking__generated__061_record_binder_main.snap
---
source: tests-integration/tests/checking/generated.rs
expression: report
---
Terms
test1 :: Record ( x :: Int, y :: Int ) -> Int
test1' :: forall (t7 :: Type) (t8 :: Type). Record ( x :: t8, y :: t7 ) -> t8
test2 :: Record ( x :: Int, y :: String ) -> Record ( x :: Int, y :: String )
test2' :: forall (t17 :: Type) (t18 :: Type). Record ( x :: t17, y :: t18 ) -> Record ( x :: t17, y :: t18 )
test3 :: Record ( age :: Int, name :: String ) -> String
test3' :: forall (t27 :: Type) (t28 :: Type). Record ( age :: t27, name :: t28 ) -> t28
nested :: Record ( inner :: Record ( x :: Int ) ) -> Int
nested' :: forall (t37 :: Type). Record ( inner :: Record ( x :: t37 ) ) -> t37

Types
