tests-integration/tests/checking/snapshots/checking__generated__064_negate_local_main.snap
---
source: tests-integration/tests/checking/generated.rs
expression: report
---
Terms
negate :: forall (a :: Type). a -> a
testRecord :: Record ( a :: Int, b :: Int )
testRecord' :: Record ( a :: Int, b :: Int )
testArray :: Array Int
testArray' :: Array Int
testFunction :: Int -> Int
testFunction' :: forall (t29 :: Type). t29 -> Int

Types
