tests-integration/tests/checking/snapshots/checking__generated__065_do_collector_main.snap
---
source: tests-integration/tests/checking/generated.rs
expression: report
---
Terms
bind :: forall (a :: Type) (b :: Type) (x :: Type) (y :: Type). Collector x a -> (a -> Collector y b) -> Collector (Tuple x y) b
discard :: forall (a :: Type) (b :: Type) (x :: Type) (y :: Type). Collector x a -> (a -> Collector y b) -> Collector (Tuple x y) b
pure :: forall (a :: Type). a -> Collector a a
test1 :: Collector (Tuple Int (Tuple String (Tuple Char (Record ( x :: Int, y :: String, z :: Char ))))) (Record ( x :: Int, y :: String, z :: Char ))
test2 :: Collector (Tuple Char (Tuple Boolean (Record ( x :: Char, y :: Boolean )))) (Record ( x :: Char, y :: Boolean ))
test3 :: Collector (Tuple Int (Tuple String (Record ( y :: Int, z :: String )))) (Record ( y :: Int, z :: String ))

Types
Collector :: Type -> Type -> Type
Tuple :: Type -> Type -> Type
