tests-integration/tests/checking/snapshots/checking__generated__066_ado_collector_main.snap
---
source: tests-integration/tests/checking/generated.rs
expression: report
---
Terms
map :: forall (a :: Type) (b :: Type) (x :: Type) (y :: Type). (a -> b) -> Collector x a -> Collector (Tuple x y) b
apply :: forall (a :: Type) (b :: Type) (x :: Type) (y :: Type). Collector x (a -> b) -> Collector y a -> Collector (Tuple x y) b
pure :: forall (a :: Type). a -> Collector a a
test1 :: forall (t18 :: Type). Collector (Tuple (Tuple (Tuple Int t18) String) Char) (Record ( x :: Int, y :: String, z :: Char ))
test2 :: forall (t37 :: Type). Collector (Tuple (Tuple Char t37) Boolean) (Record ( x :: Char, y :: Boolean ))
test3 :: forall (t51 :: Type). Collector (Tuple (Tuple Int t51) String) (Record ( x :: Int, z :: String ))

Types
Collector :: Type -> Type -> Type
Tuple :: Type -> Type -> Type
