tests-integration/tests/checking/snapshots/checking__generated__067_ado_let_main.snap
---
source: tests-integration/tests/checking/generated.rs
expression: report
---
Terms
pure :: forall (a :: Type). a -> Effect a
map :: forall (a :: Type) (b :: Type). (a -> b) -> Effect a -> Effect b
apply :: forall (a :: Type) (b :: Type). Effect (a -> b) -> Effect a -> Effect b
test :: Effect (Record ( x :: Int, y :: Record ( x :: Int ), z :: String ))

Types
Effect :: Type -> Type
