tests-integration/tests/checking/snapshots/checking__generated__069_expression_sections_inference_main.snap
---
source: tests-integration/tests/checking/generated.rs
expression: report
---
Terms
+ :: Int -> Int -> Int
- :: Int -> Int -> Int
add :: Int -> Int -> Int
sub :: Int -> Int -> Int
identity :: forall (a :: Type). a -> a
test1 :: Int -> String -> { a :: Int, b :: String }
test2 :: forall (t13 :: Type) (t16 :: Type) (t17 :: Type). (((t16 -> t17) -> t16 -> t17) -> t13) -> t13
test3 :: Boolean -> Int -> Int
test4 :: Int
test5 :: { x :: Int, y :: Int | () }
test6 :: Int

Types

Errors
CannotUnify { t1: Id<checking::core::Type>(1), t2: Id<checking::core::Type>(32) } at [TermDeclaration(Idx::<TermItem>(8))]
CannotUnify { t1: Id<checking::core::Type>(1), t2: Id<checking::core::Type>(32) } at [TermDeclaration(Idx::<TermItem>(9))]
